# ustb-cpp-programming

./: .gitignore  CMakeLists.txt  README.md
Bank/:  README.txt
Bank/bank1/: CMakeLists.txt  account.cpp  account.h  bmyi.txt  step_1.cpp
Bank/bank2/: CMakeLists.txt  account.cpp  account.h  date.cpp  date.h  step_2.cpp
Bank/bank3/: Account.cpp  Account.h  CMakeLists.txt  CreditAccount.h  SavingsAccount.cpp  SavingsAccount.h  date.cpp  date.h  step_3.cpp
Bank/bank4/: Account.cpp  Account.h  CMakeLists.txt  SavingsAccount.cpp  date.cpp  date.h  step_4.cpp
Bank/bank5/: Account.cpp  Account.h  Accumulator.cpp  Accumulator.h  CMakeLists.txt  CreditAccount.h  date.cpp  date.h  step_5.cpp
Bank/bank6/: Account.cpp  CMakeLists.txt  CreditAccount.cpp  CreditAccount.h  commands3333.txt  date.cpp  date.h  step_6.cpp
Bank/bank7/: Account.h  CMakeLists.txt  CreditAccount.cpp  SavingsAccount.cpp  SavingsAccount.h  commands.txt  date.cpp  step_7.cpp
Bank/qtbank/: Account.cpp  Account.h  CreditAccount.cpp  CreditAccount.h  SavingsAccount.cpp  SavingsAccount.h  bankusers.cpp  bankusers.h  date.cpp  date.h  insidewindow.cpp  insidewindow.h  insidewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.cpp  md5.h  qtbank.pro
HarryPotterSearch/: J.K. Rowling - HP 0 - Harry Potter Prequel.txt  J.K. Rowling - HP 3 - Harry Potter and the Prisoner of Azkaban.txt  J.K. Rowling - Quidditch Through the Ages.txt  J.K. Rowling - The Tales of Beedle the Bard.txt  mainn.cpp  test.txt  哈利波特检索实验报告.docx
HarryPotterSearch/HarryPotterSearch/: J.K. Rowling - HP 4 - Harry Potter and the Goblet of Fire.txt  J.K. Rowling - HP 6 - Harry Potter and the Half-Blood Prince.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
exercise1/: vr1_1.cpp  vr1_2.cpp  vr1_3.cpp
exercise1/1-1/: 1-1_who_catched_the_most_scholarship.rap  1. 流程图绘制2：要求绘制解决问题的算法（谁拿了最多奖学金）.docx
exercise1/1-2/: 1-2_search_the_number.rap  2. 流程图绘制1：要求绘制解决问题的算法.docx
exercise2/: vr2_1.cpp  vr2_2.cpp  vr2_3.cpp  vr2_4.cpp  vr2_5.cpp
exercise3/: vr3_1.cpp  vr3_2.cpp  vr3_3.cpp  vr3_4.cpp  vr3_5.cpp
exercise4/vr4-1/: error.multiplication.cpp  right_multiplication.cpp
exercise4/vr4-2/: right_calc.cpp  this_is_really_right.cpp
exercise4/vr4-3/: right_bubble_sort.cpp
exercise4/vr4-4/: right_seat.cpp
exercise5/: take_a_coin.cpp  vr5_1.cpp  vr5_2.cpp  vr5_3.cpp  vr5_4.cpp  vr5_5.cpp  vr5_6.cpp  vr5_7.cpp  vr5_8.cpp
planebattle/: Bullet.cpp  Bullet.h  CMakeLists.txt  ConsoleOperator.cpp  ConsoleOperator.h  EnemyPlane.cpp  EnemyPlane.h  MyPlane.cpp  MyPlane.h  TheMap.cpp  main.cpp  飞机大战的游戏设计.docx
qt_plane/: Bullet.cpp  Bullet.h  CMakeLists.txt  EnemyPlane.cpp  EnemyPlane.h  MyPlane.cpp  MyPlane.h  TheMap.cpp  TheMap.h  gameui.cpp  gameui.h  gameui.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt做的plane.docx
